--- a/consultancy-website-template/css/style.css
+++ b/consultancy-website-template/css/style.css
@@ -171,7 +171,7 @@ h6,
     position: absolute;
     content: "";
     width: 100%;
-    height: 50px;
+    min-height: 50px;
     bottom: -50px;
     left: 0;
     background: var(--light);
@@ -180,16 +180,16 @@ h6,
     transition: .5s;
 }
 
-.service-item:hover::after {
+/* .service-item:hover::after {
     bottom: -25px;
-}
+} */
 
 .service-item p {
     transition: .3s;
 }
 
 .service-item:hover p {
-    margin-bottom: 25px !important;
+    margin-bottom: 10px !important;
 }
 
 .team-item img {
