--- a/consultancy-website-template/css/style.css
+++ b/consultancy-website-template/css/style.css
@@ -118,6 +118,10 @@ h6,
     color: var(--primary);
 }
 
+.carousel-max-height {
+    max-height: 750px;
+}
+
 @media (max-width: 991.98px) {
     .navbar-light .navbar-nav .nav-link  {
         padding: 10px 0;
